// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render alpha info text 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="grafana-info-box"
        >
          This plugin is marked as being in alpha state, which means it is in early development phase and updates will include breaking changes.
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": false,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  "one link",
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": Object {},
              "name": "pretty cool plugin 1",
              "pinned": false,
              "state": "alpha",
              "type": "",
            }
          }
          onModelChange={[Function]}
        />
        <div
          className="gf-form-group section"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Render should render beta info text 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="grafana-info-box"
        >
          This plugin is marked as being in a beta development state. This means it is in currently in active development and could be missing important features.
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": false,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  "one link",
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": Object {},
              "name": "pretty cool plugin 1",
              "pinned": false,
              "state": "beta",
              "type": "",
            }
          }
          onModelChange={[Function]}
        />
        <div
          className="gf-form-group section"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Render should render component 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": false,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  "one link",
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": Object {},
              "name": "pretty cool plugin 1",
              "pinned": false,
              "state": "",
              "type": "",
            }
          }
          onModelChange={[Function]}
        />
        <div
          className="gf-form-group section"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Render should render is ready only message 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="grafana-info-box span8"
        >
          This datasource was added by config and cannot be modified using the UI. Please contact your server admin to update this datasource.
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": true,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  "one link",
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": Object {},
              "name": "pretty cool plugin 1",
              "pinned": false,
              "state": "",
              "type": "",
            }
          }
          onModelChange={[Function]}
        />
        <div
          className="gf-form-group section"
        />
        <ButtonRow
          isReadOnly={true}
          onDelete={[Function]}
          onSubmit={[Function]}
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Render should render loader 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <PageLoader
    pageName="Data source settings"
  />
</div>
`;
